--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <header>
         <div class="container nav">
             <nav>
+                <div class="mobileToggle">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
                 <div class="logo">
                     <h3>Influencer Products</h3>
                 </div>
@@ -25,6 +28,9 @@
                         <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
                         <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
                     </ul>
+                </div>
+                <div class="mobileCart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </div>
             </nav>
         </div>
