Product Names and Facebook, Youtbue Links Updated

--- a/index.html
+++ b/index.html
@@ -71,56 +71,56 @@
                 </div>
                 <div class="popularProduct">
                     <img src="images/mic.png" alt="Tripod">
-                    <h3 class="productsName">Flex Tripod</h3>
+                    <h3 class="productsName">Microphone</h3>
                     <p class="productsRatings"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="productsDescription">Wordwide shifting available
                         Buyers protection possible!</p>
                 </div>
                 <div class="popularProduct">
                     <img src="images/airpod.png" alt="Tripod">
-                    <h3 class="productsName">Flex Tripod</h3>
+                    <h3 class="productsName">Airbuds</h3>
                     <p class="productsRatings"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="productsDescription">Wordwide shifting available
                         Buyers protection possible!</p>
                 </div>
                 <div class="popularProduct">
                     <img src="images/drone.png" alt="Tripod">
-                    <h3 class="productsName">Flex Tripod</h3>
+                    <h3 class="productsName">Drone</h3>
                     <p class="productsRatings"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="productsDescription">Wordwide shifting available
                         Buyers protection possible!</p>
                 </div>
                 <div class="popularProduct">
                     <img src="images/lights.png" alt="Tripod">
-                    <h3 class="productsName">Flex Tripod</h3>
+                    <h3 class="productsName">Light Setup</h3>
                     <p class="productsRatings"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="productsDescription">Wordwide shifting available
                         Buyers protection possible!</p>
                 </div>
                 <div class="popularProduct">
                     <img src="images/setup.png" alt="Tripod">
-                    <h3 class="productsName">Flex Tripod</h3>
+                    <h3 class="productsName">Photoshoot set</h3>
                     <p class="productsRatings"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="productsDescription">Wordwide shifting available
                         Buyers protection possible!</p>
                 </div>
                 <div class="popularProduct">
                     <img src="images/camera.png" alt="Tripod">
-                    <h3 class="productsName">Flex Tripod</h3>
+                    <h3 class="productsName">Vlogging Camera</h3>
                     <p class="productsRatings"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="productsDescription">Wordwide shifting available
                         Buyers protection possible!</p>
                 </div>
                 <div class="popularProduct">
                     <img src="images/single-light.png" alt="Tripod">
-                    <h3 class="productsName">Flex Tripod</h3>
+                    <h3 class="productsName">Green Screen</h3>
                     <p class="productsRatings"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="productsDescription">Wordwide shifting available
                         Buyers protection possible!</p>
                 </div>
                 <div class="popularProduct">
                     <img src="images/action.png" alt="Tripod">
-                    <h3 class="productsName">Flex Tripod</h3>
+                    <h3 class="productsName">Action Camera</h3>
                     <p class="productsRatings"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="productsDescription">Wordwide shifting available
                         Buyers protection possible!</p>
@@ -146,10 +146,10 @@
         <h2 class="footerHeading">Influencer products</h2>
         <p class="footerCopyright">Copyright © 2020  influencer products<br>All rights reserved</p>
             <ul class="socialMenu">
-                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a href="https://facebook.com/sumon5211"><i class="fa-brands fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="https://www.youtube.com/@anamulhoquesumon9500"><i class="fa-brands fa-youtube"></i></a></li>
             </ul>
     </footer>
 </body>
