Youtube Link Updated

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <li><a href="https://facebook.com/sumon5211"><i class="fa-brands fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="https://www.youtube.com/@anamulhoquesumon9500"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="https://youtube.com/@anamulhoquesumon9500"><i class="fa-brands fa-youtube"></i></a></li>
             </ul>
     </footer>
 </body>
